--- a/scss/blocks/_signup.scss
+++ b/scss/blocks/_signup.scss
@@ -11,11 +11,24 @@
         color: $text-color-alt;
         text-transform: uppercase;
         width: 100%;
+
+        @include tabletSettings {
+            padding-left: 20px;
+        }
+
+        @include mobileSettings {
+            padding-left: 0;
+            text-align: center;
+        }
     }
 
     &__subtitle {
         @include fontProperties ($font-main, 24px, 300, 29px);
         text-transform: uppercase;
+
+        @include tabletSettings {
+            @include fontProperties ($font-main, 16px, 300, 19px);
+        }
     }
 
     &__legend-title {
@@ -27,6 +40,11 @@
     &__text {
         @include fontProperties ($font-main, 24px, 300, 29px);
         padding: 22px 0 14px 0;
+
+        @include tabletSettings {
+            @include fontProperties ($font-main, 16px, 300, 19px);
+            padding: 32px 0 14px 0;
+        }
     }
 
     &__perks {
@@ -45,20 +63,54 @@
             left: 0;
             top: 12px;
         }
+
+        @include tabletSettings {
+            @include fontProperties ($font-main, 16px, 300, 19px);
+        }
     }
 
     &__field {
         display: flex;
         justify-content: space-between;
-        padding: 64px 0 96px;
+        padding-bottom: 95px;
+
+        @include mobileSettings {
+            flex-direction: column;
+        }
+
+        @include mobileSettings {
+            width: 360px;
+            align-items: center;
+            padding-bottom: 100px;
+        }
     }
 
     &__loyalty {
-        max-width: 650px;
+        margin-top: 64px;
+        max-width: 57%;
+
+        @include tabletSettings {
+            margin-top: 40px;
+            max-width: 48%;
+        }
+
+        @include mobileSettings {
+            max-width: 95%;
+        }
     }
 
     &__form {
-        max-width: 360px;
+        margin-top: 64px;
+        max-width: 32%;
+
+        @include tabletSettings {
+            margin-top: 40px;
+            max-width: 49%;
+        }
+
+        @include mobileSettings {
+            max-width: 95%;
+        }
     }
 }
 
@@ -113,5 +165,17 @@
 
     &__field-usergender {
         margin-top: 20px;
+    }
+
+    &__checkgender-text {
+        padding-right: 15px;
+    }
+}
+
+.wtf-gender {
+    display: none;
+
+    @include tabletSettings {
+        display: inline-block;
     }
 }
